Fixed alignment issues in CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,6 @@ body {
     border-radius: 1.5rem;
 
     font-size: 1.5rem;
-    font-weight: bold;
     text-align: center;
     text-transform: uppercase;
     text-decoration: none;
@@ -105,6 +104,7 @@ body {
 .rulesTitle {
     position: fixed;
     top: 25%;
+    left: 20%;
     width: 60%;
     height:auto;
 
@@ -132,7 +132,7 @@ body {
 
     position: fixed;
     top: 35%;
-    left: 50%;
+    left: 20%;
 }
 .infoPage ul {
     display:flex;
@@ -158,6 +158,7 @@ body {
 
     position: fixed;
     bottom: 28%;
+    left: 20%;
     width: 60%;
     height: auto;
 
@@ -212,6 +213,7 @@ body {
 .lbTitle {
     position: fixed;
     top: 25%;
+    left: 20%;
     width: 60%;
     height:auto;
 
